<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.elizabethwhitebaker.choipainapp17032017.EpisodeA1">
    <TextView
        android:id="@+id/textView20E1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="How strong is your pain right now?"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.504" />

    <Spinner
        android:id="@+id/spinner3E1"
        android:layout_width="280dp"
        android:layout_height="23dp"
        android:entries="@array/TypeOfPain"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView21E1" />

    <TextView
        android:id="@+id/textView21E1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What type of pain is this?"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.502" />

    <Button
        android:id="@+id/nextButtonE1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/prevButtonE1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner3E1" />

    <Button
        android:id="@+id/prevButtonE1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Previous"
        app:layout_constraintRight_toLeftOf="@+id/nextButtonE1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner3E1"
        app:layout_constraintVertical_bias="0.512" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="292dp"
        android:layout_height="93dp"
        app:srcCompat="@drawable/painscale"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView20E1">

        <SeekBar
            android:id="@+id/seekBarA1"
            android:layout_width="290dp"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />
<requestFocus/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>