<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.elizabethwhitebaker.choipainapp17032017.EpisodeA2">
    <TextView
        android:id="@+id/textView23E2"
        android:layout_width="278dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:text="Please choose your current pain treatment intervention:"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5E2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes, please continue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button6E2"
        app:layout_constraintHorizontal_bias="0.502" />

    <Button
        android:id="@+id/button6E2"
        android:layout_width="243dp"
        android:layout_height="72dp"
        android:layout_marginBottom="16dp"
        android:text="No, let me update my current pain treatment"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:entries="@array/PastPainTreat"
        app:layout_constraintBottom_toTopOf="@+id/button5E2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23E2" />

</android.support.constraint.ConstraintLayout>