<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.elizabethwhitebaker.choipainapp17032017.HistoryA1">

    <EditText
        android:id="@+id/editText"
        android:layout_width="245dp"
        android:layout_height="46dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="FirstName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="312dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Email address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/RG1"
        app:layout_constraintLeft_toLeftOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="312dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="Ethnicity"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/prevButtonHA1"
        app:layout_constraintLeft_toLeftOf="@+id/RG1"
        app:layout_constraintTop_toBottomOf="@+id/RG1" />

    <Button
        android:id="@+id/prevButtonHA1"
        android:layout_width="100dp"
        android:layout_height="49dp"
        android:layout_weight="1"
        android:text="Previous"
        app:layout_constraintRight_toLeftOf="@+id/nextButtonHA1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/nextButtonHA1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Next"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/prevButtonHA1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <RadioGroup
        android:id="@+id/RG1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="@+id/editText6"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        app:layout_constraintBottom_toTopOf="@+id/editText5">

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="rbgender"
            android:text="Male" />

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="rbgender"
            android:text="Female" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
